test/bad/lambdas/lambda07.px

func f(g: Int->Int->Int) def
    return

f(_)
